<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:icon="@drawable/ic_home"
            android:id="@+id/navigation_home"
            android:title="@string/home" />
    <item
            android:icon="@drawable/ic_dollar"

        android:id="@+id/navigation_expenses"
        android:title="@string/expenses" />

    <item
            app:showAsAction="always"
            android:id="@+id/navigation_dashboard"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/dashboard" />

    <item
        android:id="@+id/navigation_reports"
        android:icon="@drawable/ic_notes"

        android:title="@string/reports" />
    <item
            android:id="@+id/navigation_settings"
            android:icon="@drawable/ic_settings"

            android:title="@string/settings" />

</menu>
